<resources>
    <string name="app_name">Adobe killer</string>

    <string name="shape_info_view_not_selected">Shape not selected</string>

    <string name="act_add">Add shape</string>
    <string name="act_resizing">Resizing</string>
    <string name="act_moving">Moving</string>
    <string name="act_grouping">Combine shapes</string>
    <string name="act_show_info">Shape info</string>
    <string name="act_refresh">Refresh</string>
    <string name="act_delete">Delete shape</string>

    <string name="grouping_act_submit">Submit</string>

    <string name="dialog_title_add_shape">Select the desired shape</string>
    <string name="dialog_title_change_fill_color">Change fill color</string>
    <string name="dialog_title_edit_stroke">Edit stroke</string>

    <string name="action_error_null_shape">Please, select shape before invoke any action</string>
    <string name="action_error_undefined">Undefined error</string>

    <string name="shape_not_found">Shapes have not been added yet</string>
    <string name="shape_not_selected">Shape not selected</string>

    <string name="shapes_list_title">Canvas shapes</string>
</resources>
